@@ -168,6 +168,7 @@ int p_cpu_online_action(unsigned int p_cpu) {
 
    p_text_section_lock();
    spin_lock(&p_db_lock);
+   read_lock(&p_config_lock);
 
    smp_call_function_single(p_cpu,p_dump_CPU_metadata,p_db.p_CPU_metadata_array,true);
 
@@ -186,6 +187,7 @@ int p_cpu_online_action(unsigned int p_cpu) {
       p_cpu_rehash("online");
    }
 
+   read_unlock(&p_config_lock);
    /* God mode off ;) */
 //   spin_unlock_irqrestore(&p_db_lock,p_db_flags);
    spin_unlock(&p_db_lock);
@@ -200,6 +202,7 @@ int p_cpu_dead_action(unsigned int p_cpu) {
 
    p_text_section_lock();
    spin_lock(&p_db_lock);
+   read_lock(&p_config_lock);
 
    p_db.p_CPU_metadata_array[p_cpu].p_cpu_online = P_CPU_OFFLINE;
 
@@ -226,6 +229,7 @@ int p_cpu_dead_action(unsigned int p_cpu) {
       p_cpu_rehash("offline");
    }
 
+   read_unlock(&p_config_lock);
    /* God mode off ;) */
 //   spin_unlock_irqrestore(&p_db_lock,p_db_flags);
    spin_unlock(&p_db_lock);
